--- a/TP2/PHP/docker-compose.yml
+++ b/TP2/PHP/docker-compose.yml
@@ -1,54 +1,20 @@
-version: '3'
-
+version: "3.8"
 services:
-  php-apache:
+  abala:
     build:
-      context: .
-    user: "1000:1000"
+      dockerfile: Dockerfile
     ports:
-      - "80:80"
-    volumes:
-      - ./src:/var/www/html
-    mem_limit: 1g
-    cpus: 1    
-    networks:
-      - supersite-network
-
-  mysql:
-    image: mysql:latest
+      - "80"
+  db:
+    image: mysql
+    build:
+      context: sql
     environment:
-      MYSQL_ROOT_PASSWORD: root_password
-      MYSQL_DATABASE: supersite
-      MYSQL_USER: user
-      MYSQL_PASSWORD: password
-    volumes:
-      - ./tp2/php/sql:/docker-entrypoint-initdb.d  # Utilisez le volume pour injecter le fichier SQL
-    command: --init-file /docker-entrypoint-initdb.d/seed.sql
-    networks:
-      - supersite-network
-      
+      MYSQL_ROOT_PASSWORD: gropd
   phpmyadmin:
-    image: phpmyadmin/phpmyadmin
+    image: phpmyadmin
+    restart: always
+    ports:
+      - 8080:80
     environment:
-      PMA_HOST: mysql
-      MYSQL_ROOT_PASSWORD: root
-    ports:
-      - "8080:80"
-    networks:
-      - supersite-network
-
-  nginx:
-    image: nginx:latest
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf 
-    ports:
-      - "8081:80"
-    networks:
-      - supersite-network
-
-networks:
-  supersite-network:
-    driver: bridge
-
-volumes:
-  mysql-data:  # Exécutez le fichier SQL lors du lancement
+      - PMA_ARBITRARY=1
